// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Creating a new modular app via the CLI should create the right tree 1`] = `
"new-modular-app
├─ .editorconfig
├─ .eslintignore
├─ .gitignore
├─ .prettierignore
├─ .vscode
│  ├─ extensions.json
│  ├─ launch.json
│  └─ settings.json
├─ .yarnrc
├─ README.md
├─ modular
│  ├─ setupEnvironment.ts
│  └─ setupTests.ts
├─ package.json
├─ packages
│  ├─ README.md
│  └─ app
│     ├─ README.md
│     ├─ package.json
│     ├─ public
│     │  ├─ favicon.ico
│     │  ├─ index.html
│     │  ├─ logo192.png
│     │  ├─ logo512.png
│     │  ├─ manifest.json
│     │  └─ robots.txt
│     ├─ src
│     │  ├─ App.css
│     │  ├─ App.tsx
│     │  ├─ __tests__
│     │  │  └─ App.test.tsx
│     │  ├─ index.css
│     │  ├─ index.tsx
│     │  ├─ logo.svg
│     │  └─ react-app-env.d.ts
│     └─ tsconfig.json
├─ tsconfig.json
└─ yarn.lock"
`;

exports[`Creating a new modular app via the CLI with --empty should create the right tree 1`] = `
"another-new-modular-app
├─ .editorconfig
├─ .eslintignore
├─ .gitignore
├─ .prettierignore
├─ .vscode
│  ├─ extensions.json
│  ├─ launch.json
│  └─ settings.json
├─ .yarnrc
├─ README.md
├─ modular
│  ├─ setupEnvironment.ts
│  └─ setupTests.ts
├─ package.json
├─ packages
│  └─ README.md
├─ tsconfig.json
└─ yarn.lock"
`;
